# c3po

./: .gitignore  README.md  pyproject.toml
c3po/export/: svo.py
docs/: ETL.md
scratch/: ingest.py
scripts/: svo2mp4.py
